examples/compiler_errors/header_counts/ErrorNoteMain.flx
// expect: compile_error
// expect-error: E300

import ErrorNoteBroken

fn main() -> Unit {
    let _x = ErrorNoteBroken.one()
    let value: Int = "oops"
    print("hi")
}
